[package]
name = "aoc_2019"
version = "0.1.0"
authors = ["Nathan Wiebe Neufeldt <wn.nathan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "01a"
path = "src/01a.rs"

[[bin]]
name = "01b"
path = "src/01b.rs"
